<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.labs1904.tracker.home.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_image"
                app:errorDrawable="@{viewModel.errorDrawable}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderDrawable="@{viewModel.placeholderDrawable}"
                app:url="@{viewModel.homeImageURL}"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/testing_title"
                app:layout_constraintStart_toStartOf="@id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/home_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:fontFamily="sans-serif"
                android:text="@string/testing"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.labs1904.tracker.utils.HomeCardView
                android:id="@+id/total_tests_card"
                app:layout_constraintEnd_toStartOf="@id/total_positive_card"
                app:layout_constraintStart_toStartOf="@id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/testing_title"
                app:title="@string/total_test_results"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard" />

            <com.labs1904.tracker.utils.HomeCardView
                android:id="@+id/total_positive_card"
                app:layout_constraintEnd_toEndOf="@id/end_guide"
                app:layout_constraintStart_toEndOf="@id/total_tests_card"
                app:layout_constraintTop_toTopOf="@id/total_tests_card"
                app:title="@string/positive_tests"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <com.labs1904.tracker.utils.HomeCardView
                android:id="@+id/total_pending_card"
                app:layout_constraintEnd_toEndOf="@id/total_tests_card"
                app:layout_constraintStart_toStartOf="@id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/total_tests_card"
                app:title="@string/pending_tests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard" />

            <com.labs1904.tracker.utils.HomeCardView
                android:id="@+id/total_negative_card"
                app:layout_constraintEnd_toEndOf="@id/end_guide"
                app:layout_constraintStart_toStartOf="@id/total_positive_card"
                app:layout_constraintTop_toTopOf="@id/total_pending_card"
                app:title="@string/negative_tests"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/outcomes_title"
                app:layout_constraintStart_toStartOf="@id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/total_pending_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:fontFamily="sans-serif"
                android:text="@string/outcomes"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.labs1904.tracker.utils.HomeCardView
                android:id="@+id/total_recovered_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/total_deaths_card"
                app:layout_constraintStart_toStartOf="@id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/outcomes_title"
                app:title="@string/recovered_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard" />

            <com.labs1904.tracker.utils.HomeCardView
                android:id="@+id/total_deaths_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/end_guide"
                app:layout_constraintStart_toEndOf="@id/total_recovered_card"
                app:layout_constraintTop_toTopOf="@id/total_recovered_card"
                app:title="@string/deaths_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_standard" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guide"
                app:layout_constraintGuide_begin="@dimen/margin_standard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guide"
                app:layout_constraintGuide_end="@dimen/margin_standard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>